--- a/index.html
+++ b/index.html
@@ -2,15 +2,26 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
+    <link href="https://fonts.googleapis.com/css?family=Lato&display=swap" rel="stylesheet">
     <meta name="viewport"
           content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <link rel="stylesheet" href="css/style.css">
     <title>Document</title>
 </head>
 <body>
-   <h1> perkenal kan hello world</h1>
-    <div>
-        this is the div
-    </div>
+   <header class="header">
+       <div class="logo-box">
+           <img src="img/Logo%20Tweetwit.png" alt="Logo" class="logo">
+       </div>
+       <div class="text-box">
+           <h1 class="heading-primary">
+               <span class="heading-primary-main">Outdoors</span>
+               <span class="heading-primary-sub">is where life happens  </span>
+           </h1>
+       </div>
+
+   </header>
+
 </body>
 </html>
