--- a/index.html
+++ b/index.html
@@ -6,6 +6,8 @@
     <meta name="viewport"
           content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <link rel="shortcut icon" href="img/Logo%20Tweetwit.png" />
+
     <link rel="stylesheet" href="css/style.css">
     <title>Document</title>
 </head>
